Jenkins_Project/igw.tf
// Creates IGW
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags = "${var.tags}"
}
